--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ markdown:         kramdown
 highlighter:      rouge
 
 # Setup
-title:            Maykool BLog
+title:            Maykool Blog
 tagline:          A kool blog
 description:      "A blog for learning and document stuffs I do on my day to day..."
 url:              https://www.linkedin.com/in/maykol-alberto-jimenez-bejarano-8a747b44/
