Fixes to GitHub link

--- a/_config.yml
+++ b/_config.yml
@@ -28,4 +28,4 @@ plugins:
 version:            0.0.1
 
 github:
-  repo:             https://github.com/maykooljb/maykooljb.github.io
+  repo:             https://github.com/maykooljb/
